# agenda_medica

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  config.py  extensions.py  routes.py
app/agenda/: api_client.py  routes.py  services.py
app/api_mock/: fake_data.py  routes.py
app/auth/: forms.py  login.py  routes.py
app/commands/: infos.py  seed.py
app/models/: __init__.py  schedule.py  user.py
app/static/css/: agenda.css
app/static/js/: agenda.js
app/templates/: base.html
app/templates/agenda/: index.html
app/templates/auth/: login.html
app/tests/: conftest.py  test_api.py  test_auth.py
migrations/versions/: 480d10e4fb5c_criando_tabela_de_agendamentos.py  64b9275a4a42_adicionando_convênio_e_status_no_.py  d077872e7435_criando_tabela_dos_usuários.py
